
  TODO: recompile .mo (creme_config, emails)

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # In 'creme.forms.widgets', the state 'disabled' has been fixed :
        - in 'CalendarWidget' (indeed the Javascript component 'creme.widget.DatePicker').
        - In 'SelectorList'.


  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # In 'creme_core.forms.fields.SelectorList', the constructor's parameter & attribute "enabled" are deprecated ;
          use <attrs={"disabled": True}> to disable instead (backported to Creme 2.3).
          The context variable "clonelast" is deprecated too.


== Version 2.3.4 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # The management of the properties constraints of a Relation view has been fixed
      (it was not mandatory to have all the needed properties).
    # The mass-import code checks now property constraints for relationships.
    # An issue with Firefox and 'creme.layout.TextAreaAutoSize' has been fixed.
    # Apps :
        * Persons :
            - The mandatory properties are now checked when a Contact (related to an Organisation) is created.
        * Emails :
            - The brick for Emails' history has been fixed: it was always empty.
        * Billing :
            - In the bricks of lines :
                - The width of <select> has been fixed (smaller now).
                - The height of the comment text area was fixed in the theme "chantilly".
        * Projects :
            - The default form layout for ProjectTask has been fixed.
        * VCFs :
            - In the import form, the RelationTypes with property constraints are not proposed anymore
              (it's an easy way in order to respect the constraints, we could do better).


  Developers side :