@@ -9,7 +9,8 @@
   ------------
     # In 'creme.forms.widgets', the state 'disabled' has been fixed :
         - in 'CalendarWidget' (indeed the Javascript component 'creme.widget.DatePicker').
-        - In 'SelectorList'.
+        - in 'SelectorList'.
+        - in 'UnorderedMultipleChoiceWidget' (indeed the JavaScript component 'creme.widget.CheckListSelect').
 
 
   Developers side :
